Modificados gráficos y memoria con los nuevos datos

--- a/Práctica3/memoria/MemoriaPractica3.tex
+++ b/Práctica3/memoria/MemoriaPractica3.tex
@@ -409,17 +409,17 @@ Media         & \multicolumn{1}{c|}{98,2427}                                    
 \hline
               &                                                                               & Wdbc                                                                         &                              &          &                                                                               & Movement                                                                     & Libras                       &          &                                                                               & Arrhythmia                                                                   &                              &           \\ \hline
               & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T        & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T        & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ train\end{tabular}} & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}\%\_clas\\ test\end{tabular}} & \multicolumn{1}{c|}{\%\_red} & T         \\ \hline
-Partición 1-1 & \multicolumn{1}{c|}{99,2958}                                                  & \multicolumn{1}{c|}{95,0877}                                                 & \multicolumn{1}{c|}{43,3333} & 111,9277 & \multicolumn{1}{c|}{71,6667}                                                  & \multicolumn{1}{c|}{76,1111}                                                 & \multicolumn{1}{c|}{45,5556} & 182,9612 & \multicolumn{1}{c|}{77,0833}                                                  & \multicolumn{1}{c|}{67,5258}                                                 & \multicolumn{1}{c|}{45,3237} & 929,8706  \\ \hline
-Partición 1-2 & \multicolumn{1}{c|}{97,5439}                                                  & \multicolumn{1}{c|}{97,5352}                                                 & \multicolumn{1}{c|}{40,0000} & 110,6645 & \multicolumn{1}{c|}{81,1111}                                                  & \multicolumn{1}{c|}{74,4444}                                                 & \multicolumn{1}{c|}{54,4444} & 150,1978 & \multicolumn{1}{c|}{70,1031}                                                  & \multicolumn{1}{c|}{61,4583}                                                 & \multicolumn{1}{c|}{50,0000} & 737,2140  \\ \hline
-Partición 2-1 & \multicolumn{1}{c|}{97,8873}                                                  & \multicolumn{1}{c|}{96,1404}                                                 & \multicolumn{1}{c|}{23,3333} & 142,1192 & \multicolumn{1}{c|}{78,3333}                                                  & \multicolumn{1}{c|}{78,3333}                                                 & \multicolumn{1}{c|}{51,1111} & 159,6853 & \multicolumn{1}{c|}{72,9167}                                                  & \multicolumn{1}{c|}{63,4021}                                                 & \multicolumn{1}{c|}{25,5396} & 1146,5426 \\ \hline
-Partición 2-2 & \multicolumn{1}{c|}{99,2982}                                                  & \multicolumn{1}{c|}{95,0704}                                                 & \multicolumn{1}{c|}{56,6667} & 101,8055 & \multicolumn{1}{c|}{77,2222}                                                  & \multicolumn{1}{c|}{72,2222}                                                 & \multicolumn{1}{c|}{45,5556} & 176,3094 & \multicolumn{1}{c|}{77,3196}                                                  & \multicolumn{1}{c|}{64,5833}                                                 & \multicolumn{1}{c|}{25,5396} & 998,2010  \\ \hline
-Partición 3-1 & \multicolumn{1}{c|}{98,9437}                                                  & \multicolumn{1}{c|}{97,1930}                                                 & \multicolumn{1}{c|}{43,3333} & 100,1677 & \multicolumn{1}{c|}{78,8889}                                                  & \multicolumn{1}{c|}{77,2222}                                                 & \multicolumn{1}{c|}{56,6667} & 143,8691 & \multicolumn{1}{c|}{73,9583}                                                  & \multicolumn{1}{c|}{65,9794}                                                 & \multicolumn{1}{c|}{45,6835} & 919,9947  \\ \hline
-Partición 3-2 & \multicolumn{1}{c|}{98,2456}                                                  & \multicolumn{1}{c|}{96,1268}                                                 & \multicolumn{1}{c|}{33,3333} & 111,6887 & \multicolumn{1}{c|}{81,1111}                                                  & \multicolumn{1}{c|}{72,7778}                                                 & \multicolumn{1}{c|}{45,5556} & 176,5872 & \multicolumn{1}{c|}{73,7113}                                                  & \multicolumn{1}{c|}{65,6250}                                                 & \multicolumn{1}{c|}{24,4604} & 1036,6571 \\ \hline
-Partición 4-1 & \multicolumn{1}{c|}{97,8873}                                                  & \multicolumn{1}{c|}{94,3860}                                                 & \multicolumn{1}{c|}{23,3333} & 133,0441 & \multicolumn{1}{c|}{76,6667}                                                  & \multicolumn{1}{c|}{80,5556}                                                 & \multicolumn{1}{c|}{38,8889} & 212,0066 & \multicolumn{1}{c|}{77,6042}                                                  & \multicolumn{1}{c|}{62,3711}                                                 & \multicolumn{1}{c|}{22,3022} & 1154,9914 \\ \hline
-Partición 4-2 & \multicolumn{1}{c|}{98,2456}                                                  & \multicolumn{1}{c|}{95,7746}                                                 & \multicolumn{1}{c|}{26,6667} & 130,8645 & \multicolumn{1}{c|}{81,6667}                                                  & \multicolumn{1}{c|}{66,6667}                                                 & \multicolumn{1}{c|}{55,5556} & 147,1362 & \multicolumn{1}{c|}{76,2887}                                                  & \multicolumn{1}{c|}{67,1875}                                                 & \multicolumn{1}{c|}{34,8921} & 880,4354  \\ \hline
-Partición 5-1 & \multicolumn{1}{c|}{97,8873}                                                  & \multicolumn{1}{c|}{96,8421}                                                 & \multicolumn{1}{c|}{36,6667} & 116,6638 & \multicolumn{1}{c|}{80,0000}                                                  & \multicolumn{1}{c|}{68,8889}                                                 & \multicolumn{1}{c|}{58,8889} & 142,2323 & \multicolumn{1}{c|}{78,6458}                                                  & \multicolumn{1}{c|}{64,4330}                                                 & \multicolumn{1}{c|}{43,5252} & 894,1407  \\ \hline
-Partición 5-2 & \multicolumn{1}{c|}{98,5965}                                                  & \multicolumn{1}{c|}{97,8873}                                                 & \multicolumn{1}{c|}{36,6667} & 111,9023 & \multicolumn{1}{c|}{83,8889}                                                  & \multicolumn{1}{c|}{71,1111}                                                 & \multicolumn{1}{c|}{58,8889} & 137,9519 & \multicolumn{1}{c|}{71,1340}                                                  & \multicolumn{1}{c|}{63,5417}                                                 & \multicolumn{1}{c|}{19,4245} & 933,6901  \\ \hline
-Media         & \multicolumn{1}{c|}{98,3831}                                                  & \multicolumn{1}{c|}{96,2043}                                                 & \multicolumn{1}{c|}{36,3333} & 117,0848 & \multicolumn{1}{c|}{79,0556}                                                  & \multicolumn{1}{c|}{73,8333}                                                 & \multicolumn{1}{c|}{51,1111} & 162,8937 & \multicolumn{1}{c|}{74,8765}                                                  & \multicolumn{1}{c|}{64,6107}                                                 & \multicolumn{1}{c|}{33,6691} & 963,1738  \\ \hline
+Partición 1-1 & \multicolumn{1}{c|}{99,6479}                                                  & \multicolumn{1}{c|}{94,0351}                                                 & \multicolumn{1}{c|}{46,6667} & 96,2785  & \multicolumn{1}{c|}{71,6667}                                                  & \multicolumn{1}{c|}{73,3333}                                                 & \multicolumn{1}{c|}{47,7778} & 169,1125 & \multicolumn{1}{c|}{78,1250}                                                  & \multicolumn{1}{c|}{65,9794}                                                 & \multicolumn{1}{c|}{31,6547} & 1099,8844 \\ \hline
+Partición 1-2 & \multicolumn{1}{c|}{97,5439}                                                  & \multicolumn{1}{c|}{97,1831}                                                 & \multicolumn{1}{c|}{43,3333} & 101,4924 & \multicolumn{1}{c|}{80,5556}                                                  & \multicolumn{1}{c|}{73,8889}                                                 & \multicolumn{1}{c|}{46,6667} & 171,7580 & \multicolumn{1}{c|}{74,2268}                                                  & \multicolumn{1}{c|}{60,4167}                                                 & \multicolumn{1}{c|}{49,6403} & 744,3959  \\ \hline
+Partición 2-1 & \multicolumn{1}{c|}{97,8873}                                                  & \multicolumn{1}{c|}{96,8421}                                                 & \multicolumn{1}{c|}{46,6667} & 95,8477  & \multicolumn{1}{c|}{78,3333}                                                  & \multicolumn{1}{c|}{77,2222}                                                 & \multicolumn{1}{c|}{50,0000} & 161,9440 & \multicolumn{1}{c|}{72,3958}                                                  & \multicolumn{1}{c|}{65,9794}                                                 & \multicolumn{1}{c|}{44,2446} & 940,2871  \\ \hline
+Partición 2-2 & \multicolumn{1}{c|}{99,2982}                                                  & \multicolumn{1}{c|}{94,0141}                                                 & \multicolumn{1}{c|}{43,3333} & 106,2164 & \multicolumn{1}{c|}{77,2222}                                                  & \multicolumn{1}{c|}{71,1111}                                                 & \multicolumn{1}{c|}{60,0000} & 134,9406 & \multicolumn{1}{c|}{77,3196}                                                  & \multicolumn{1}{c|}{63,5417}                                                 & \multicolumn{1}{c|}{34,1727} & 936,4389  \\ \hline
+Partición 3-1 & \multicolumn{1}{c|}{98,5916}                                                  & \multicolumn{1}{c|}{96,4912}                                                 & \multicolumn{1}{c|}{30,0000} & 125,7204 & \multicolumn{1}{c|}{78,8889}                                                  & \multicolumn{1}{c|}{71,6667}                                                 & \multicolumn{1}{c|}{51,1111} & 159,4049 & \multicolumn{1}{c|}{73,4375}                                                  & \multicolumn{1}{c|}{65,9794}                                                 & \multicolumn{1}{c|}{51,7986} & 839,7319  \\ \hline
+Partición 3-2 & \multicolumn{1}{c|}{97,8947}                                                  & \multicolumn{1}{c|}{96,1268}                                                 & \multicolumn{1}{c|}{40,0000} & 106,3723 & \multicolumn{1}{c|}{80,5556}                                                  & \multicolumn{1}{c|}{73,8889}                                                 & \multicolumn{1}{c|}{52,2222} & 156,0843 & \multicolumn{1}{c|}{73,7113}                                                  & \multicolumn{1}{c|}{67,1875}                                                 & \multicolumn{1}{c|}{47,4820} & 787,2249  \\ \hline
+Partición 4-1 & \multicolumn{1}{c|}{97,5352}                                                  & \multicolumn{1}{c|}{96,4912}                                                 & \multicolumn{1}{c|}{26,6667} & 126,9952 & \multicolumn{1}{c|}{73,3333}                                                  & \multicolumn{1}{c|}{75,0000}                                                 & \multicolumn{1}{c|}{60,0000} & 138,5446 & \multicolumn{1}{c|}{73,9583}                                                  & \multicolumn{1}{c|}{64,9485}                                                 & \multicolumn{1}{c|}{51,7986} & 838,1093  \\ \hline
+Partición 4-2 & \multicolumn{1}{c|}{98,2456}                                                  & \multicolumn{1}{c|}{96,4789}                                                 & \multicolumn{1}{c|}{60,0000} & 75,7221  & \multicolumn{1}{c|}{80,5556}                                                  & \multicolumn{1}{c|}{65,5556}                                                 & \multicolumn{1}{c|}{52,2222} & 157,3399 & \multicolumn{1}{c|}{75,2577}                                                  & \multicolumn{1}{c|}{67,7083}                                                 & \multicolumn{1}{c|}{27,6978} & 941,2742  \\ \hline
+Partición 5-1 & \multicolumn{1}{c|}{97,5352}                                                  & \multicolumn{1}{c|}{95,4386}                                                 & \multicolumn{1}{c|}{30,0000} & 123,9213 & \multicolumn{1}{c|}{80,5556}                                                  & \multicolumn{1}{c|}{72,2222}                                                 & \multicolumn{1}{c|}{45,5556} & 179,1717 & \multicolumn{1}{c|}{79,6875}                                                  & \multicolumn{1}{c|}{63,4021}                                                 & \multicolumn{1}{c|}{52,1583} & 821,0201  \\ \hline
+Partición 5-2 & \multicolumn{1}{c|}{98,5965}                                                  & \multicolumn{1}{c|}{97,1831}                                                 & \multicolumn{1}{c|}{30,0000} & 118,2406 & \multicolumn{1}{c|}{81,1111}                                                  & \multicolumn{1}{c|}{71,6667}                                                 & \multicolumn{1}{c|}{44,4444} & 190,1193 & \multicolumn{1}{c|}{69,5876}                                                  & \multicolumn{1}{c|}{61,4583}                                                 & \multicolumn{1}{c|}{51,4388} & 713,7478  \\ \hline
+Media         & \multicolumn{1}{c|}{98,2776}                                                  & \multicolumn{1}{c|}{96,0284}                                                 & \multicolumn{1}{c|}{39,6667} & 107,6807 & \multicolumn{1}{c|}{78,2778}                                                  & \multicolumn{1}{c|}{72,5556}                                                 & \multicolumn{1}{c|}{51,0000} & 161,8420 & \multicolumn{1}{c|}{74,7707}                                                  & \multicolumn{1}{c|}{64,6601}                                                 & \multicolumn{1}{c|}{44,2086} & 866,2114  \\ \hline
 \end{tabular}}
 \end{table}
 
@@ -453,7 +453,7 @@ A continuación vemos la tabla comparativa, que tiene la última fila (las media
 \begin{table}[H]
 \centering
 \caption{Comparativa}
-\label{Comparativa}
+\label{comparativa}
 \resizebox{\textwidth}{!}{\begin{tabular}{|c|cccc|cccc|cccc|}
 \hline
      &                                                                               & Wdbc                                                                         &                              &          &                                                                               & Movement                                                                     & Libras                       &          &                                                                               & Arrhythmia                                                                   &                              &          \\ \hline
@@ -461,7 +461,7 @@ A continuación vemos la tabla comparativa, que tiene la última fila (las media
 3-NN & \multicolumn{1}{c|}{96,0563}                                                  & \multicolumn{1}{c|}{96,7308}                                                 & \multicolumn{1}{c|}{0,0000}  & 0,0131   & \multicolumn{1}{c|}{67,7778}                                                  & \multicolumn{1}{c|}{74,1111}                                                 & \multicolumn{1}{c|}{0,0000}  & 0,0336   & \multicolumn{1}{c|}{63,2292}                                                  & \multicolumn{1}{c|}{63,0101}                                                 & \multicolumn{1}{c|}{0,0000}  & 0,1000   \\ \hline
 SFS  & \multicolumn{1}{c|}{97,1531}                                                  & \multicolumn{1}{c|}{94,4806}                                                 & \multicolumn{1}{c|}{85,4000} & 0,4401   & \multicolumn{1}{c|}{75,8889}                                                  & \multicolumn{1}{c|}{69,8333}                                                 & \multicolumn{1}{c|}{89,7778} & 2,0557   & \multicolumn{1}{c|}{78,1368}                                                  & \multicolumn{1}{c|}{69,2762}                                                 & \multicolumn{1}{c|}{97,9856} & 3,8331   \\ \hline
 AGG  & \multicolumn{1}{c|}{98,2427}                                                  & \multicolumn{1}{c|}{95,9931}                                                 & \multicolumn{1}{c|}{49,0000} & 94,3327  & \multicolumn{1}{c|}{79,6111}                                                  & \multicolumn{1}{c|}{73,6111}                                                 & \multicolumn{1}{c|}{53,2222} & 154,6825 & \multicolumn{1}{c|}{76,5314}                                                  & \multicolumn{1}{c|}{65,3404}                                                 & \multicolumn{1}{c|}{51,6906} & 758,3582 \\ \hline
-AGE  & \multicolumn{1}{c|}{98,3831}                                                  & \multicolumn{1}{c|}{96,2043}                                                 & \multicolumn{1}{c|}{36,3333} & 117,0848 & \multicolumn{1}{c|}{79,0556}                                                  & \multicolumn{1}{c|}{73,8333}                                                 & \multicolumn{1}{c|}{51,1111} & 162,8937 & \multicolumn{1}{c|}{74,8765}                                                  & \multicolumn{1}{c|}{64,6107}                                                 & \multicolumn{1}{c|}{33,6691} & 963,1738 \\ \hline
+AGE  & \multicolumn{1}{c|}{98,2776}                                                  & \multicolumn{1}{c|}{96,0284}                                                 & \multicolumn{1}{c|}{39,6667} & 107,6807 & \multicolumn{1}{c|}{78,2778}                                                  & \multicolumn{1}{c|}{72,5556}                                                 & \multicolumn{1}{c|}{51,0000} & 161,8420 & \multicolumn{1}{c|}{74,7707}                                                  & \multicolumn{1}{c|}{64,6601}                                                 & \multicolumn{1}{c|}{44,2086} & 866,2114 \\ \hline
 \end{tabular}}
 \end{table}
 
