Primera versión del análisis de resultados en la pr 3

--- a/Práctica3/memoria/MemoriaPractica3.tex
+++ b/Práctica3/memoria/MemoriaPractica3.tex
@@ -490,6 +490,11 @@ AGE  & \multicolumn{1}{c|}{98,2776}                                             
 \caption{Tiempo en segundos} \label{fig:tiempos}
 \end{figure}
 
+Vamos a fijarnos primero en las tasas de acierto, tanto de los conjuntos de train como de test. Como podemos ver, en Wdbc había poco margen de mejora (\texttt{SFS} ya obtiene 97,15 en train y 94,48 en test) pero aun así tanto \texttt{AGG} como \texttt{AGE} tienen mejores tasas: cerca de 98,2 en train y cerca de 96 en test los dos. En libras se nota un poco más la mejora, ya que aquí sí se podía mejorar más (\texttt{SFS} tiene 75,8 en train y 69,8 en test) pero sigue siendo poco, ya que en ningún caso hay más de un 5\% de diferencia con \texttt{SFS}. De los dos genéticos, el que tiene más tasa es el generacional, que llega a 79,6 en train y 73,6 en test. Sin embargo en arritmia ninguno de los dos genéticos llega a superar al \texttt{SFS}, quedando el generacional un casi un 2\% por debajo y el estacionario casi un 4\% por debajo en train y casi un 4\% y un 5\% respectivamente por debajo en test. Esto es debido a que en arritmia hay muchas características que no aportan mejora a las soluciones o que incluso empeoran las soluciones, por lo que es lógico el que el \texttt{SFS}, que elige una a una las características que aportan mayor mejora tenga más tasa en bases de datos como esta, ya que en los genéticos no estamos dando prioridad a aquellas soluciones que tienen menor número de características, es decir, no eliminamos de las soluciones características que no aportan nada o que empeoran las soluciones, quizás si se hubiera considerado esto y se hubiera añadido a la implementación, se hubieran obtenido mejores tasas de acierto, sobre todo en arritmia, pero también hubiera aumentado más aún el tiempo que tardar en finalizar el algoritmo, que como vamos a ver ahora, ya es muy alto comparándolo con \texttt{SFS}.\\
+
+Como decíamos, en cuanto a los tiempos, los genéticos tardan más que \texttt{SFS} porque tienen más carga computacional entre la selección, los cruces y las mutaciones, además de que no paran hasta haber llamado 15000 veces a la función de evaluación. Cabe destacar que el generacional, además de obtener mejores tasas, como acabamos de comentar, también tarda un poquito menos que el estacionario (esta diferencia es más significativa en arritmia). Sin embargo en arritmia los dos tardan demasiado para no conseguir ninguna mejora con respecto al \texttt{SFS} por lo que en realidad, si miramos el conjunto, no son buenos para un problema como el de selección de características (estamos hablando de cerca de 14 minutos frente a los segundos que tarda \texttt{SFS} para obtener menor tasa de acierto) en bases de datos grandes con muchas características.\\
+
+Con respecto al 3NN al principio parece raro que tenga menos tasa de acierto que los demás (en la mayoría de los casos) puesto que está considerando todas las características. Sin embargo como hemos comentado, no todas las características tienen que ser buenas definiendo una clase, además de que puede haber ruidos que hayan afectado más a unas que a otras. Es por esto que es normal que tenga un poco menos de acierto y que no haya mucha diferencia entre las tasas de acierto para entrenamiento y para test y además que la de entrenamiento no sea mejor que la de test, puesto que en este algoritmo en realidad las dos serían de test ya que no estamos utilizando ninguno de los dos conjuntos para aprender qué características usar al estar utilizando todas las características.
 
 \section{Bibliografía}
 \begin{enumerate}
