--- a/Práctica2/memoria/MemoriaPractica2.tex
+++ b/Práctica2/memoria/MemoriaPractica2.tex
@@ -45,7 +45,6 @@ Quinto curso del Doble Grado en Ingeniería Informática y Matemáticas.\\
 
 Algoritmos considerados:
 \begin{enumerate}
-\item Greedy Sequential Forward Selection.
 \item Búsqueda Multiarranque Básica
 \item GRASP
 \item Búsqueda Local Reiterada
@@ -182,7 +181,7 @@ busquedaMultiBasica(clases, conjunto, knn) |\textbf{Empezar}|:
          mejor_tasa = tasa_actual
       Fin
    Fin
-   |\textbf{Devolver}| mejor_sol, mejor_tasa
+   |\textbf{Devolver}| mejor_sol y mejor_tasa
 Fin
 \end{lstlisting}
 
@@ -196,9 +195,9 @@ siguienteCaracterista(clases, mascara, conjunto, alpha, knn) |\textbf{Empezar}|:
    pos = posiciones que no est|é|n ya seleccionadas en la m|á|scara
    tasas = vector vac|í|o donde guardamos las tasas de los vecinos de "mascara"
    for i en pos:
-      mascara[pos[i]] = True
-      Calculamos con knn la tasa de la m|á|scara con la nueva caracter|í|stica a|ñ|adida
-      tasa[i] = nueva tasa #Guardamos la tasa
+      mascara[pos[i]] = True	#Generamos el vecino
+      nueva_tasa = CalcularTasa(conjunto, mascara, knn)
+      tasas[i] = nueva tasa #Guardamos la tasa del vecino
       mascara[pos[i]] = False #Volvemos a la m|\textit{á}|scara original.
    Fin
    
@@ -218,14 +217,14 @@ Vamos ahora con el pseudocódigo del algoritmo GRASP, en el que vamos a hacer us
 \begin{lstlisting}
 GRASP(clases, conjunto, knn) |\textbf{Empezar}|:
    for i entre 0 y 24:
-      caract = vector de "False"
+      caract = soluci|ó|n inicial inicializada a False
       while haya mejora:
          nueva_tasa, mejor_pos = siguienteCaracteristica(clases,
           caracteristicas, conjunto, 0.3, knn)
       
          if nueva_tasa > tasa_actual:
             Actualizamos tasa actual
-            caract[mejor_pos] = True
+            caract[mejor_pos] = True 	#Actualizamos la soluci|\textit{ó}|n
          else:
             mejora = False y paramos de a|ñ|adir caracter|í|sticas
          Fin
@@ -245,7 +244,7 @@ Fin
 
 \subsection{Búsqueda Local Reiterada (ILS)}
 
-Este algoritmo consisten en generar una solución aleatoria, optimizarla con el algoritmo de Búsqueda Local, y repetir lo siguiente 24 veces: mutar la mejor solución encontrada hasta el momento y optimizarla de nuevo con Búsqueda Local. Se devolverá la mejor solución encontrada en todo este proceso.\\
+Este algoritmo consiste en generar una solución aleatoria, optimizarla con el algoritmo de Búsqueda Local, y repetir lo siguiente 24 veces: mutar la mejor solución encontrada hasta el momento y optimizarla de nuevo con Búsqueda Local. Se devolverá la mejor solución encontrada en todo este proceso.\\
 
 Veamos primero el pseudocódigo para la función con la que vamos a mutar una solución, consistente en elegir $t$ características aleatorias de la solución y cambiarlas con el operador \texttt{Flip()}. En mi caso lo que he hecho ha sido hacer una permutación del 0 al $n$, donde $n$ es el número de características en cada caso, y cambiar las $t$ primeras posiciones del vector que he permutado en la solución.
 
@@ -254,7 +253,7 @@ mutar(solucion, n, t) |\textbf{Empezar}|:
    mutada = copia de solucion
    pos = permutaci|ó|n del vector [0,...,n]
    for i entre 0 y t:
-      Flip(mutada, pos[i])
+      Flip(mutada, pos[i])	#Cambiamos las caracter|\textit{í}|sticas aleatorias
    Fin
    |\textbf{Devolver}| mutada
 Fin
@@ -504,7 +503,7 @@ Esto puede ser debido a que con la solución aleatoria con la que se empieza en 
 
 Obviamente, todos tardan más que el algoritmo de comparación \texttt{SFS} ya que este sólo se repite una vez y no tiene optimización posterior (tampoco tendría sentido ya que hemos ido eligiendo características hasta que dejamos de obtener mejora).\\
 
-Entrando ahora en comparar las tasas de acierto en el conjunto de train entre todos los algoritmos, \texttt{GRASP} es el que mejor tasa obtiene siempre, aunque con menos diferencia en Wdbc, hay más de un punto de diferencia en libras y casi dos en arritmia. Los demás algoritmos hay unos que funcionan mejor que otros según la base de datos, como \texttt{BMB}, que funciona mejor en Wdbc que \texttt{ILS}, aunque en realidad no hay mucha diferencia, mientras que \texttt{ILS} sí queda más de un punto por encima en Libras casi dos en Arritmia, aunque en Arritmia tanto \texttt{ILS} como \texttt{BMB} quedan por debajo más de 5 puntos del \texttt{SFS}.\\
+Entrando ahora en comparar las tasas de acierto en el conjunto de train entre todos los algoritmos, \texttt{GRASP} es el que mejor tasa obtiene siempre, aunque con menos diferencia en Wdbc, hay más de un punto de diferencia en libras y casi dos en arritmia. Los demás algoritmos hay unos que funcionan mejor que otros según la base de datos, como \texttt{BMB}, que funciona mejor en Wdbc que \texttt{ILS}, aunque en realidad no hay mucha diferencia, mientras que \texttt{ILS} sí queda más de un punto por encima en Libras y casi dos en Arritmia, aunque en Arritmia tanto \texttt{ILS} como \texttt{BMB} quedan por debajo más de 5 puntos del \texttt{SFS}.\\
 
 En cuanto a la tasa de acierto en test varía un poco con respecto a lo comentado para train, ya que ahora \texttt{GRASP} sólo tiene la mejor tasa en Arritmia, mientras que \texttt{BMB} es el que mejor tasa tiene para Wdbc y Libras, aunque las diferencias son menores que para los conjuntos de train. \texttt{SFS} es peor que \texttt{BMB}, \texttt{ILS} y \texttt{GRASP} excepto en Arritmia, donde sólo queda por debajo de \texttt{GRASP}, cuando en \texttt{SFS} estamos añadiendo características hasta que no hay mejora mientras que en \texttt{BMB} e \texttt{ILS} se comienza con soluciones aleatorias, lo que nos lleva a pensar que importa el orden en el que se elijan las características y en el \texttt{SFS} siempre se escoge primero la que más ganancia da, que es algo que no hace \texttt{GRASP} y de hecho este tiene tasas mejores.\\
 
@@ -512,7 +511,7 @@ En cuanto a la tasa de reducción, es normal que todas se queden por debajo del 
 
 Con respecto al 3NN al principio parece raro que tenga menos tasa de acierto que los demás (en la mayoría de los casos) puesto que está considerando todas las características. Sin embargo como acabamos de comentar, no todas las características tienen que ser buenas definiendo una clase, además de que puede haber ruidos que hayan afectado más a unas que a otras. Es por esto que es normal que tenga un poco menos de acierto y que no haya mucha diferencia entre las tasas de acierto para entrenamiento y para test y además que la de entrenamiento no sea mejor que la de test, puesto que en este algoritmo en realidad las dos serían de test ya que no estamos utilizando ninguno de los dos conjuntos para aprender al estar utilizando todas las características.\\
 
-Con todo esto, si tuviéramos que elegir uno de estos algoritmos para este problema, sería \texttt{GRASP}, ya que es el que mejor relación tasa/tiempo tiene, sobre todo si tenemos bastantes características, que es donde más se nota, mientras que si hay pocas la diferencia es mucho mejor, pero éste algoritmo sigue siendo ligeramente mejor.
+Con todo esto, si tuviéramos que elegir uno de estos algoritmos para este problema, sería \texttt{GRASP}, ya que es el que mejor relación tasa/tiempo tiene, sobre todo si tenemos bastantes características, que es donde más se nota, mientras que si hay pocas la diferencia es menor, pero éste algoritmo sigue siendo ligeramente mejor.
 
 \section{Bibliografía}
 \begin{enumerate}
